@@ -1,0 +1,7 @@
+autom4te.cache
+tkConfig.sh
+Makefile
+config.status
+*.dll
+*.a
+*.exe
